[package]
name = "amora"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.9"
futures = "0.3.32"
http = "1.4.2"
log = "0.4.33"
log4rs = "1.4.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
serde_yaml = "0.9.34"
tokio = { version = "1.52.3", features = ["full"] }
tokio-stream = { version = "0.1.18", features = ["sync"] }
tower-http = { version = "0.7.0", features = ["cors"] }
